                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 27-09-2006 fixed: shoutcast listings broke after the url parsing fixes
 - 26-09-2006 fixed: Milkdrop - crash when changing preset packs when preset was locked
 - 26-09-2006 fixed: Milkdrop - started with default preset when preset was locked
 - 26-09-2006 fixed: first packet received by video decoder in dvdplayer after a flush would be from previouse set of data (more junk frames than needed)
 - 26-09-2006 fixed: progressbar didn't show on chapter change
 - 26-09-2006 fixed: skip buttons in osd always changed file not chapter in dvd's
 - 26-09-2006 changed: libdvdnav.dll and libdvdcss-2. dll updated with simpler cache and builtin layerchange error detection.
 - 26-09-2006 fixed: Ftp directory didn't handle failed listings very gratiously.
 - 25-09-2006 fixed: Initial partymode list was not randomized (always database order).
 - 25-09-2006 fixed: Initial image shown when viewing a picture/slideshow was sometimes blank.
 - 25-09-2006 changed: TTF rendering speed up.
 - 24-09-2006 fixed: memory leak when exiting credits
 - 24-09-2006 fixed: leaving the screensaver could cause black screens for non-dimmed screensaver modes
 - 24-09-2006 fixed: url parser choked on http urls containing ;, #, also for urls with ? but no filename after host
 - 24-09-2006 fixed: item 7 was not remembered in large item view
 - 24-09-2006 fixed: no sound when playing dvr-ms files ( switched back to mplayer demuxer with fix for it's choppy playback )
 - 24-09-2006 updated: Hungarian language file (Thnx to bali001)
 - 24-09-2006 updated: Indonesian language file (Thnx to djoens)
 - 24-09-2006 updated: Spanish language file (Thnx to jose_t)